--- a/.gitignore
+++ b/.gitignore
@@ -15,13 +15,13 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+**/vendor/
 
 # Go workspace file
 go.work
 go.work.sum
 
 # env file
-.env
+#.env
 
 **/.idea/
