Supplemented the deployment manifest

--- a/hw_04/k8s_manifests/deployment.yaml
+++ b/hw_04/k8s_manifests/deployment.yaml
@@ -23,15 +23,15 @@ spec:
                 name: app-config
             - secretRef:
                 name: db-secret
-#          livenessProbe:
-#            httpGet:
-#              path: /health
-#              port: 8000
-#            initialDelaySeconds: 5
-#            periodSeconds: 30
-#          readinessProbe:
-#            httpGet:
-#              path: /health
-#              port: 8000
-#            initialDelaySeconds: 5
-#            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 30
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8080
+            initialDelaySeconds: 5
+            periodSeconds: 10
