--- a/hw_06/auth-service-chart/templates/migrations-config.yaml
+++ b/hw_06/auth-service-chart/templates/migrations-config.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: migrations-config
+  name: auth-migrations-config
   namespace: m
 data:
   dump.sql: |
@@ -11,4 +11,23 @@ data:
         email      VARCHAR(100) NOT NULL UNIQUE,
         password   VARCHAR(255) NOT NULL,
         created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
+    );
+
+---
+
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: crud-migrations-config
+  namespace: m
+data:
+  dump.sql: |
+    CREATE TABLE users
+    (
+        id         SERIAL PRIMARY KEY,
+        username   VARCHAR(50)         NOT NULL,
+        first_name VARCHAR(50),
+        last_name  VARCHAR(50),
+        email      VARCHAR(100) UNIQUE NOT NULL,
+        phone      VARCHAR(15)
     );
