--- a/hw_06/auth-service-chart/templates/secret.yaml
+++ b/hw_06/auth-service-chart/templates/secret.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: db-secret
+  name: auth-db-secret
   namespace: m
 type: Opaque
 data:
@@ -11,3 +11,31 @@ data:
   DB_PASSWORD: "cGFzcw=="
   DB_USER: "cm9vdA=="
   DB_NAME: "dXNlcnM="
+  JWT_SECRET: "c2VjcmV0"
+
+---
+
+apiVersion: v1
+kind: Secret
+metadata:
+  name: crud-db-secret
+  namespace: m
+type: Opaque
+data:
+  POSTGRES_PASSWORD: "cGFzcw=="
+  POSTGRES_USER: "cm9vdA=="
+  POSTGRES_DB: "dXNlcnM="
+  DB_PASSWORD: "cGFzcw=="
+  DB_USER: "cm9vdA=="
+  DB_NAME: "dXNlcnM="
+
+---
+
+apiVersion: v1
+kind: Secret
+metadata:
+  name: jwt-secret
+  namespace: m
+type: Opaque
+data:
+  JWT_SECRET: "c2VjcmV0"
