--- a/hw_06/auth-service-chart/templates/service.yaml
+++ b/hw_06/auth-service-chart/templates/service.yaml
@@ -10,3 +10,33 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 8081
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: crud-service
+  namespace: m
+spec:
+  selector:
+    app: crud-app
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8080
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: jwt-validator
+  namespace: m
+spec:
+  selector:
+    app: jwt-validator
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8088
