--- a/hw_06/auth-service-chart/templates/ingress.yaml
+++ b/hw_06/auth-service-chart/templates/ingress.yaml
@@ -3,6 +3,12 @@ kind: Ingress
 metadata:
   name: auth-ingress
   namespace: m
+  annotations:
+    nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
+    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
+    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
 spec:
   ingressClassName: nginx
   rules:
@@ -23,13 +29,23 @@ spec:
                 name: auth-service
                 port:
                   number: 80
+                  
 ---
 
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: crud-ingress
+  name: user-ingress
   namespace: m
+  annotations:
+    nginx.ingress.kubernetes.io/auth-url: "http://jwt-validator.m.svc.cluster.local/validate"
+    nginx.ingress.kubernetes.io/auth-method: POST
+    nginx.ingress.kubernetes.io/auth-response-headers: "x-user-id"
+    nginx.ingress.kubernetes.io/enable-cors: "true"
+    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
+    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
+    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization"
 spec:
   ingressClassName: nginx
   rules:
@@ -40,27 +56,6 @@ spec:
             pathType: Prefix
             backend:
               service:
-                name: crud-service
-                port:
-                  number: 80
-
----
-
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: jwt-ingress
-  namespace: m
-spec:
-  ingressClassName: nginx
-  rules:
-    - host: arch.homework
-      http:
-        paths:
-          - path: /validate
-            pathType: Prefix
-            backend:
-              service:
-                name: jwt-validator
+                name: user-service
                 port:
                   number: 80
