--- a/hw_06/auth-service-chart/templates/secret.yaml
+++ b/hw_06/auth-service-chart/templates/secret.yaml
@@ -18,7 +18,18 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: crud-db-secret
+  name: jwt-secret
+  namespace: m
+type: Opaque
+data:
+  JWT_SECRET: "c2VjcmV0"
+
+---
+
+apiVersion: v1
+kind: Secret
+metadata:
+  name: user-db-secret
   namespace: m
 type: Opaque
 data:
@@ -28,14 +39,3 @@ data:
   DB_PASSWORD: "cGFzcw=="
   DB_USER: "cm9vdA=="
   DB_NAME: "dXNlcnM="
-
----
-
-apiVersion: v1
-kind: Secret
-metadata:
-  name: jwt-secret
-  namespace: m
-type: Opaque
-data:
-  JWT_SECRET: "c2VjcmV0"
