--- a/hw_04/crud_app/docker-compose.yml
+++ b/hw_04/crud_app/docker-compose.yml
@@ -4,7 +4,7 @@ networks:
 
 services:
   app:
-    container_name: crud_app
+    container_name: user_service
     build:
       context: .
       dockerfile: Dockerfile
