--- a/hw_06/auth-service-chart/templates/migrations-config.yaml
+++ b/hw_06/auth-service-chart/templates/migrations-config.yaml
@@ -18,7 +18,7 @@ data:
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: crud-migrations-config
+  name: user-migrations-config
   namespace: m
 data:
   dump.sql: |
