--- a/hw_06/auth-service-chart/templates/secret.yaml
+++ b/hw_06/auth-service-chart/templates/secret.yaml
@@ -12,6 +12,8 @@ data:
   DB_USER: "cm9vdA=="
   DB_NAME: "dXNlcnM="
   JWT_SECRET: "c2VjcmV0"
+  REDIS_PASSWORD: "cGFzcw=="
+  REDIS_USER: "YWRtaW4="  
 
 ---
 
