--- a/hw_06/auth-service-chart/templates/service.yaml
+++ b/hw_06/auth-service-chart/templates/service.yaml
@@ -25,3 +25,48 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 8081
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: auth-postgresql
+  namespace: m
+spec:
+  selector:
+    app: auth-postgresql
+  ports:
+    - protocol: TCP
+      port: 5432
+      targetPort: 5432
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: user-postgresql
+  namespace: m
+spec:
+  selector:
+    app: user-postgresql
+  ports:
+    - protocol: TCP
+      port: 5432
+      targetPort: 5432
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: redis
+  namespace: m
+spec:
+  selector:
+    app: redis
+  ports:
+    - protocol: TCP
+      port: 6379
+      targetPort: 6379
