--- a/hw_06/auth-service-chart/templates/migrations-config.yaml
+++ b/hw_06/auth-service-chart/templates/migrations-config.yaml
@@ -5,13 +5,19 @@ metadata:
   namespace: m
 data:
   dump.sql: |
-    CREATE TABLE users
-    (
-        id         SERIAL PRIMARY KEY,
-        email      VARCHAR(100) NOT NULL UNIQUE,
-        password   VARCHAR(255) NOT NULL,
-        created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
-    );
+    DO $$
+    BEGIN
+      IF NOT EXISTS (SELECT 1 FROM information_schema.tables WHERE table_name = 'users') THEN
+        CREATE TABLE users
+        (
+            id         SERIAL PRIMARY KEY,
+            email      VARCHAR(100) NOT NULL UNIQUE,
+            password   VARCHAR(255) NOT NULL,
+            created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
+        );
+      END IF;
+    END
+    $$;
 
 ---
 
@@ -22,12 +28,18 @@ metadata:
   namespace: m
 data:
   dump.sql: |
-    CREATE TABLE users
-    (
-        id         SERIAL PRIMARY KEY,
-        username   VARCHAR(50)         NOT NULL,
-        first_name VARCHAR(50),
-        last_name  VARCHAR(50),
-        email      VARCHAR(100) UNIQUE NOT NULL,
-        phone      VARCHAR(15)
-    );
+    DO $$
+    BEGIN
+      IF NOT EXISTS (SELECT 1 FROM information_schema.tables WHERE table_name = 'users') THEN
+        CREATE TABLE users
+        (
+            id         SERIAL PRIMARY KEY,
+            username   VARCHAR(50)         NOT NULL,
+            first_name VARCHAR(50),
+            last_name  VARCHAR(50),
+            email      VARCHAR(100) UNIQUE NOT NULL,
+            phone      VARCHAR(15)
+        );
+      END IF;
+    END
+    $$;
