--- a/hw_06/auth-service-chart/templates/statefulset.yaml
+++ b/hw_06/auth-service-chart/templates/statefulset.yaml
@@ -71,3 +71,54 @@ spec:
         resources:
           requests:
             storage: 2Gi
+
+# ---
+
+# apiVersion: apps/v1
+# kind: StatefulSet
+# metadata:
+#   name: redis
+#   namespace: m
+# spec:
+#   serviceName: "redis"
+#   replicas: 1
+#   selector:
+#     matchLabels:
+#       app: redis
+#   template:
+#     metadata:
+#       labels:
+#         app: redis
+#     spec:
+#       containers:
+#         - name: redis
+#           image: redis:latest
+#           command: [ "sh", "-c" ]
+#           args:
+#             - |
+#               mkdir -p /usr/local/etc/redis &&
+#               echo "bind 0.0.0.0" > /usr/local/etc/redis/redis.conf &&
+#               echo "requirepass $REDIS_PASSWORD" >> /usr/local/etc/redis/redis.conf &&
+#               echo "appendonly yes" >> /usr/local/etc/redis/redis.conf &&
+#               echo "appendfsync everysec" >> /usr/local/etc/redis/redis.conf &&
+#               echo "user default on >$REDIS_PASSWORD ~* +@all" >> /usr/local/etc/redis/users.acl &&
+#               redis-server /usr/local/etc/redis/redis.conf --aclfile /usr/local/etc/redis/users.acl
+#           ports:
+#             - containerPort: 6379
+#           env:
+#             - name: REDIS_PASSWORD
+#               valueFrom:
+#                 secretKeyRef:
+#                   name: auth-db-secret
+#                   key: REDIS_PASSWORD
+#           volumeMounts:
+#             - name: redis-storage
+#               mountPath: /data
+#   volumeClaimTemplates:
+#     - metadata:
+#         name: redis-storage
+#       spec:
+#         accessModes: [ "ReadWriteOnce" ]
+#         resources:
+#           requests:
+#             storage: 1Gi
