--- a/project/route-taxi-booking/templates/postgres/migrations-config.yaml
+++ b/project/route-taxi-booking/templates/postgres/migrations-config.yaml
@@ -8,14 +8,14 @@ data:
     DO $$
     BEGIN
       IF NOT EXISTS (SELECT 1 FROM information_schema.tables WHERE table_name = 'users') THEN
-        CREATE TABLE users
-        (
-            id         SERIAL PRIMARY KEY,
-            email      VARCHAR(100) NOT NULL UNIQUE,
-            password   VARCHAR(255) NOT NULL,
-            created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
-        );
-      END IF;
+    CREATE TABLE users
+    (
+        id         SERIAL PRIMARY KEY,
+        email      VARCHAR(100) NOT NULL UNIQUE,
+        password   VARCHAR(255) NOT NULL,
+        created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
+    );
+    END IF;
     END
     $$;
 
@@ -28,19 +28,22 @@ metadata:
   namespace: m
 data:
   dump.sql: |
-    DO $$
+    DO
+    $$
     BEGIN
-      IF NOT EXISTS (SELECT 1 FROM information_schema.tables WHERE table_name = 'users') THEN
-        CREATE TABLE users
-        (
-            id         SERIAL PRIMARY KEY,
-            username   VARCHAR(50)         NOT NULL,
-            first_name VARCHAR(50),
-            last_name  VARCHAR(50),
-            email      VARCHAR(100) UNIQUE NOT NULL,
-            phone      VARCHAR(15)
-        );
-      END IF;
+      IF
+    NOT EXISTS (SELECT 1 FROM information_schema.tables WHERE table_name = 'users') THEN
+    CREATE TABLE users
+    (
+        id         SERIAL PRIMARY KEY,
+        username   VARCHAR(50) NOT NULL,
+        first_name VARCHAR(50),
+        last_name  VARCHAR(50),
+        email      VARCHAR(50) UNIQUE NOT NULL,
+        phone      VARCHAR(15),
+        created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
+    );
+    END IF;
     END
     $$;
 
@@ -89,8 +92,7 @@ data:
         user_id    INTEGER NOT NULL,
         route_id   INTEGER NOT NULL,
         seats      INTEGER NOT NULL,
-        created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
-        FOREIGN KEY (route_id) REFERENCES routes(id)
+        created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
     );
     END IF;
     END
